--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -3,7 +3,7 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: "Nunito", sans-serif;
+$font-family-sans-serif: 'Marcellus SC', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
@@ -18,3 +18,14 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+$white: #ffffff;
+
+// Main colors
+$primary-color: #ffcc00;
+$secondary-color: #0c1c31;
+$border-color: #f2f4f3;
+$brown-text-color: #b76e79;
+$yellow-text-color: #fefce0;
+
+// Font colors
+$font-color-black: #0c1c31;
