--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,7 @@
 
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Marcellus+SC');
 
 // Variables
 @import 'variables';
@@ -8,7 +9,10 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+@import 'navbar';
+@import 'homepage';
+@import 'footer';
+
+html, body{
+  font-family: 'Marcellus SC', san-serif;
 }
