--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -26,6 +26,11 @@ $secondary-color: #0c1c31;
 $border-color: #f2f4f3;
 $brown-text-color: #b76e79;
 $yellow-text-color: #fefce0;
+$background-color: #fbfcfb;
 
 // Font colors
 $font-color-black: #0c1c31;
+
+// Values
+$navbar-height: 72px;
+$navbar-height-mobile: 33px;
