--- a/resources/sass/homepage.scss
+++ b/resources/sass/homepage.scss
@@ -1,9 +1,15 @@
 .homepage {
+    background-color: $background-color;
     background-image: url("/images/homepage-sofa-img.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
-    width: 100%;
-    height: 768px;
+    background-position: center;
+    height: 100vh;
+    width: 100vw;
+    @media only screen and (max-width: 768px) {
+        background-size: contain;
+        background-position: top $navbar-height-mobile left;
+    }
 
     .searchbar-header {
         display: none;
@@ -14,9 +20,9 @@
         top: 50vh;
         width: 100%;
         padding: 0px 75px;
+        text-align: right;
 
         .-heading {
-            font-family: Helvetica, sans-serif;
             font-size: 24px;
             color: $brown-text-color;
         }
@@ -26,7 +32,7 @@
 
             .-dept {
                 color: $yellow-text-color;
-                padding: 0px 20px;
+                padding-left: 50px;
                 font-size: 40px;
             }
         }
@@ -91,15 +97,75 @@
             }
         }
 
-        .socials{
-            .-text{
+        .socials {
+            .-text {
                 font-size: 18px;
                 line-height: 2;
             }
-            .-icon{
+
+            .-icon {
                 font-size: 20px;
                 padding: 0px 8px;
             }
         }
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .searchbar-body{
+        width: 292px !important;
+        left: calc(50% - 146px ) !important;
+        height: 34px !important;
+
+        .search-icon{
+            font-size: 18px !important;
+        }
+
+        .form-control[type="search"]{
+            padding-top: 0px;
+            padding-bottom: 0px;
+            max-height: 24px;
+            line-height: 1;
+            font-size: 14px;
+        }
+    }
+
+    .category-links{
+        text-align: left !important;
+        padding: 0px 34px !important;
+
+        .-heading{
+            font-size: 14px !important;
+        }
+
+        .-depts{
+            margin-top: 0px !important;
+            .-dept{
+                padding: 0px 15px !important;
+                color: $secondary-color !important;
+                font-size: 24px !important;
+            }
+        }
+    }
+
+    .brand-association{    
+        padding: 0px 34px !important;
+        top: 73vh;
+        .-text{
+            font-size: 14px !important;
+            color: $brown-text-color;
+            margin-bottom: 20px;
+        }
+        .socials{
+            display: none;
+        }
+        .brand-logos{
+            .brand-logo{
+                width: 20% !important;
+                &.more-soon{
+                    width: 30% !important;
+                }
+            }
+        } 
     }
 }
