--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -23,10 +23,10 @@ $white: #ffffff;
 // Main colors
 $primary-color: #ffcc00;
 $secondary-color: #0c1c31;
-$border-color: #f2f4f3;
+$border-color: #F2F4F3;
 $brown-text-color: #b76e79;
 $yellow-text-color: #fefce0;
-$background-color: #fbfcfb;
+$background-color: #fbfbfb;
 
 // Font colors
 $font-color-black: #0c1c31;
