--- a/resources/sass/navbar.scss
+++ b/resources/sass/navbar.scss
@@ -50,8 +50,11 @@
         height: $navbar-height-mobile;
         padding-top: 0px;
         padding-bottom: 0px;
-        .navbar-toggler .-bars{
-            font-size: 18px;
+        .navbar-toggler{
+            padding-left: 0px;
+            .-bars{
+                font-size: 18px;
+            }
         }
         .navbar-brand {
             text-align: center;
