--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -27,9 +27,10 @@ $border-color: #F2F4F3;
 $brown-text-color: #b76e79;
 $yellow-text-color: #fefce0;
 $background-color: #fbfbfb;
+$dropdown-background-color: #F7F6F7;
 
 // Font colors
-$font-color-black: #0c1c31;
+$font-color-black: $secondary-color;
 
 // Values
 $navbar-height: 72px;
