--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,7 +11,9 @@
 
 @import 'navbar';
 @import 'homepage';
+@import 'subnav';
 @import 'footer';
+@import 'listing';
 
 html, body{
   font-family: 'Marcellus SC', san-serif;
