--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -6,9 +6,12 @@
 
     .listing-container {
         margin-top: 35px;
+        margin: auto;
+        padding: 0px;
 
         .filters {
             width: 180px;
+            margin-top: 45px;
 
             .filter {
                 .filter-header {
@@ -92,9 +95,10 @@
                 }
 
                 .slider-container {
-                    .-info{
+                    .-info {
                         margin-left: 10px;
                     }
+
                     .slider {
                         -webkit-appearance: none;
                         width: 100%;
@@ -122,6 +126,75 @@
                         background: $background-color;
                         border: 1px solid $secondary-color;
                         cursor: pointer;
+                    }
+                }
+            }
+        }
+
+        .sortby {
+            .form-control {
+                display: inline-block;
+                width: auto;
+                margin-left: 10px;
+            }
+        }
+
+        .total-items {
+            text-align: right;
+        }
+
+        .products-container {
+            padding: 0px;
+
+            .ls-prod-container {
+                max-width: 100%;
+                margin: 65px auto auto auto;
+
+                .ls-product-div {
+                    padding: 0px 10px;
+                    text-align: center;
+                    margin-bottom: 35px;
+
+                    .ls-product {
+                        position: relative;
+                        margin-bottom: 15px;
+
+                        .prod-info {
+                            position: absolute;
+                            bottom: 0px;
+                            padding: 0px 10px;
+                            width: 100%;
+                            background-color: rgba(255, 255, 255, 0.7);
+                            height: 25px;
+                            text-align: left;
+
+                            .-prices {
+                                .-cprice {
+                                    color: $primary-color;
+                                }
+
+                                .-oldprice {
+                                    text-decoration: line-through;
+                                }
+                            }
+                        }
+
+                        .wishlist-icon {
+                            position: absolute;
+                            margin: 15px;
+                            top: 0px;
+                            right: 0px;
+
+                            .-icon {
+                                font-size: 15px;
+                            }
+                        }
+
+                        .-name{
+                            font-weight: bold;
+                            font-size: 14px;
+                            text-align: center;
+                        }
                     }
                 }
             }
